# hawk

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  deployment.yaml  sales.json
docs/: data-analysis.md  getting-started.md  query-language.md  string-operations.md  text-processing.md
examples/: README.md  number.txt  sales.csv  sales.json  server.conf  system_info.txt  test.json  users.csv  users.json  users.yaml
examples/scripts/: README.md  cleanup.sh  download_datasets.sh  generate_large.sh
examples/small/: customers.json  ec2_instances.json  employees.json  error_messages.txt  nginx.conf  orders.csv  products.yaml  urls.txt  user_behavior.json
src/: arg.rs  error.rs  executor.rs  filter.rs  lib.rs  main.rs  output.rs  parser.rs  setup.rs  stats_opts.rs  string_ops.rs  utils.rs
