[package]
name = "hawk"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.40", features = ["derive"] }
indexmap = { version = "2.10.0", features = ["serde"] }
regex = "1.11.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.140", features = ["preserve_order"] }
thiserror = "2.0.12"
