[package]
name = "hawk-data"
version = "0.2.3"
edition = "2024"
authors = ["Kyota <jagbvg.eptpeox@gmail.com>"]
license = "MIT"
description = "Modern data analysis tool for structured data (JSON, YAML, CSV)"
readme = "README.md"
homepage = "https://github.com/kyotalab/hawk"
repository = "https://github.com/kyotalab/hawk"
keywords = ["awk", "cli", "jq", "analysis"]
categories = ["command-line-utilities"]

[[bin]]
name = "hawk"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.40", features = ["derive"] }
csv = "1.3.1"
indexmap = { version = "2.10.0", features = ["serde"] }
is-terminal = "0.4.16"
regex = "1.11.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.140", features = ["preserve_order"] }
serde_yaml = "0.9.34"
termcolor = "1.4.1"
thiserror = "2.0.12"
